--- a/index.html
+++ b/index.html
@@ -1,253 +1,232 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-<title>部活動出欠管理</title>
-<meta charset="UTF-8">
-<style>
-body { font-family: sans-serif; }
-h1, h2 { text-align: center; }
-table { width: 100%; border-collapse: collapse; margin-bottom: 20px; }
-th, td { border: 1px solid black; padding: 8px; text-align: center; }
-th { background-color: #f0f0f0; }
-.button-container { text-align: center; margin-bottom: 20px; }
-button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
-#addMemberSection { display: none; margin-bottom: 20px; border: 1px solid #ccc; padding: 15px; }
-#addMemberSection h2 { margin-top: 0; }
-#addMemberSection input[type="text"], #addMemberSection input[type="password"] { width: calc(100% - 22px); padding: 8px; margin-bottom: 10px; border: 1px solid #ccc; }
-.attendance-checkbox { transform: scale(1.5); /* チェックボックスを大きく */ }
-</style>
+  <meta charset="UTF-8">
+  <title>部活出欠管理サイト</title>
+  <style>
+    body { font-family: sans-serif; margin: 20px; }
+    h2 { border-bottom: 1px solid #ccc; padding-bottom: 5px; }
+    #instrumentSelection, #attendanceSection, #adminSection, #adminLogin {
+      margin-bottom: 20px;
+      padding: 10px;
+      border: 1px solid #aaa;
+      border-radius: 5px;
+    }
+    label { display: block; margin: 5px 0; }
+    button { margin: 5px; }
+    .name-item { margin: 5px 0; }
+    .name-item span { margin-right: 10px; }
+  </style>
 </head>
 <body>
+  <!-- 楽器選択セクション -->
+  <div id="instrumentSelection">
+    <h2>楽器を選択してください</h2>
+    <form id="instrumentForm">
+      <label><input type="checkbox" name="instruments" value="フルート"> フルート</label>
+      <label><input type="checkbox" name="instruments" value="クラリネット"> クラリネット</label>
+      <label><input type="checkbox" name="instruments" value="オーボエ"> オーボエ</label>
+      <label><input type="checkbox" name="instruments" value="サックス"> サックス</label>
+      <label><input type="checkbox" name="instruments" value="トランペット"> トランペット</label>
+      <label><input type="checkbox" name="instruments" value="ホルン"> ホルン</label>
+      <label><input type="checkbox" name="instruments" value="トロンボーン"> トロンボーン</label>
+      <label><input type="checkbox" name="instruments" value="ユーフォニアム"> ユーフォニアム</label>
+      <label><input type="checkbox" name="instruments" value="コントラバス"> コントラバス</label>
+      <label><input type="checkbox" name="instruments" value="チューバ"> チューバ</label>
+      <label><input type="checkbox" name="instruments" value="パーカッション"> パーカッション</label>
+      <br>
+      <button type="submit">出欠をとる</button>
+    </form>
+  </div>
 
-<h1>[あなたの部活動名] 出欠管理</h1>
-
-<div id="addMemberSection">
-    <h2>メンバー追加・編集 (管理者用)</h2>
-    <input type="password" id="adminPassword" placeholder="管理者パスワード">
-    <button onclick="checkAdminPassword()">認証</button>
-    <div id="addMemberForm" style="display: none;">
-        <input type="text" id="newMemberName" placeholder="新しいメンバー名">
-        <button onclick="addMember()">メンバー追加</button>
-        <ul id="memberList"></ul> <br>
-        <button onclick="saveMembers()">メンバーリストを保存</button>
+  <!-- 出欠入力セクション -->
+  <div id="attendanceSection" style="display:none;">
+    <h2>出欠確認</h2>
+    <div id="attendanceList">
+      <!-- 各名前のチェックボックスを動的に生成 -->
     </div>
-</div>
+    <button id="saveAttendance">保存</button>
+    <button id="adminToggle">管理者モード</button>
+  </div>
 
-<div class="button-container">
-    <button onclick="toggleAddMemberSection()">メンバー追加・編集</button>
-</div>
+  <!-- 管理者ログインセクション -->
+  <div id="adminLogin" style="display:none;">
+    <h2>管理者ログイン</h2>
+    <input type="password" id="adminPassword" placeholder="パスワード">
+    <button id="loginAdmin">ログイン</button>
+  </div>
 
-<h2>出欠状況 (本日: <span id="todayDate"></span>)</h2>
+  <!-- 管理者モードセクション -->
+  <div id="adminSection" style="display:none;">
+    <h2>管理者モード</h2>
+    <button id="exitAdmin">終了</button>
+    <h3>人名の追加</h3>
+    <input type="text" id="newName" placeholder="名前">
+    <button id="addName">追加</button>
+    <h3>名前の一覧</h3>
+    <div id="nameList">
+      <!-- 追加された名前の一覧を動的に生成 -->
+    </div>
+  </div>
 
-<table id="attendanceTable">
-    <thead>
-        <tr>
-            <th>名前</th>
-            <th>出席</th>
-            <th>欠席</th>
-        </tr>
-    </thead>
-    <tbody id="attendanceTableBody">
-        </tbody>
-</table>
-
-<div class="button-container">
-    <button onclick="updateAttendance()">出欠を更新</button>
-</div>
-
-<script>
-const adminPass = "admin123"; // ★★★ 管理者パスワード ★★★  <- 必要に応じて変更してください。
-let adminMode = false; // 管理者モードの状態を保持
-
-document.addEventListener('DOMContentLoaded', function() {
-    updateTodayDate();
-    loadMembers();
-    loadAttendance();
-    renderAttendanceTable();
-});
-
-function updateTodayDate() {
-    const todaySpan = document.getElementById('todayDate');
-    const today = new Date();
-    const formattedDate = today.toLocaleDateString('ja-JP', { month: 'numeric', day: 'numeric' });
-    todaySpan.textContent = formattedDate;
-}
-
-function toggleAddMemberSection() {
-    const section = document.getElementById('addMemberSection');
-    section.style.display = section.style.display === 'none' ? 'block' : 'none';
-    const form = document.getElementById('addMemberForm');
-    form.style.display = 'none'; // メンバー追加フォームも非表示にする
-}
-
-function checkAdminPassword() {
-    const passwordInput = document.getElementById('adminPassword');
-    const form = document.getElementById('addMemberForm');
-    if (passwordInput.value === adminPass) {
-        form.style.display = 'block';
-        loadMemberList(); // メンバーリストをロード
-        passwordInput.value = ''; // パスワード入力欄をクリア
-        alert('管理者モードになりました。');
-        adminMode = true; // 管理者モードON
-    } else {
-        alert('パスワードが違います。');
-        form.style.display = 'none'; // フォームを非表示に戻す
-        adminMode = false; // 管理者モードOFF
+  <script>
+    // 今日の日付を "YYYY-MM-DD" 形式で取得する関数
+    function getTodayKey() {
+      const d = new Date();
+      return d.getFullYear() + "-" +
+             (d.getMonth() + 1).toString().padStart(2, '0') + "-" +
+             d.getDate().toString().padStart(2, '0');
     }
-}
 
-
-let members = []; // メンバーリストを保存する配列
-
-function loadMembers() {
-    const storedMembers = localStorage.getItem('members');
-    if (storedMembers) {
-        members = JSON.parse(storedMembers);
-    } else {
-        members = ["メンバー１", "メンバー２", "メンバー３"]; // 初期メンバーの例
-        saveMembers(); // 初期メンバーリストを保存
+    // 名前リストを localStorage から取得（なければ空配列）
+    function loadNames() {
+      let names = localStorage.getItem("names");
+      return names ? JSON.parse(names) : [];
     }
-}
 
-function loadMemberList() { // 管理者画面用のメンバーリスト表示
-    const memberListUl = document.getElementById('memberList');
-    memberListUl.innerHTML = ''; // リストをクリア
-    members.forEach((member, index) => {
-        const listItem = document.createElement('li');
-        listItem.textContent = member;
-        const deleteButton = document.createElement('button');
-        deleteButton.textContent = '削除';
-        deleteButton.onclick = function() { deleteMember(index); };
-        listItem.appendChild(deleteButton);
-        memberListUl.appendChild(listItem);
-    });
-}
+    // 名前リストを localStorage に保存
+    function saveNames(names) {
+      localStorage.setItem("names", JSON.stringify(names));
+    }
 
+    // 出欠状況をレンダリング（localStorage に保存された当日のデータを反映）
+    function renderAttendance() {
+      const names = loadNames();
+      const todayKey = "attendance_" + getTodayKey();
+      let attendance = localStorage.getItem(todayKey);
+      attendance = attendance ? JSON.parse(attendance) : {};
+      const container = document.getElementById("attendanceList");
+      container.innerHTML = "";
+      names.forEach((name) => {
+        const div = document.createElement("div");
+        const label = document.createElement("label");
+        const checkbox = document.createElement("input");
+        checkbox.type = "checkbox";
+        checkbox.checked = attendance[name] || false;
+        // チェック状態の変更を attendance オブジェクトに反映
+        checkbox.onchange = function() {
+          attendance[name] = checkbox.checked;
+        };
+        label.appendChild(checkbox);
+        label.append(" " + name);
+        div.appendChild(label);
+        container.appendChild(div);
+      });
+      // 保存ボタンで localStorage に出欠状況を保存
+      document.getElementById("saveAttendance").onclick = function() {
+        localStorage.setItem(todayKey, JSON.stringify(attendance));
+        alert("出欠を保存しました");
+      };
+    }
 
-function addMember() {
-    if (!adminMode) {
-        alert('管理者モードでのみメンバー追加が可能です。');
+    // 管理者モード用：名前一覧のレンダリング（変更・削除ボタン付き）
+    function renderNameList() {
+      const names = loadNames();
+      const container = document.getElementById("nameList");
+      container.innerHTML = "";
+      names.forEach((name, index) => {
+        const div = document.createElement("div");
+        div.className = "name-item";
+        const span = document.createElement("span");
+        span.textContent = name;
+        const editButton = document.createElement("button");
+        editButton.textContent = "変更";
+        editButton.onclick = function() {
+          const newName = prompt("新しい名前を入力してください", name);
+          if (newName) {
+            names[index] = newName;
+            saveNames(names);
+            renderNameList();
+            renderAttendance();
+          }
+        };
+        const deleteButton = document.createElement("button");
+        deleteButton.textContent = "削除";
+        deleteButton.onclick = function() {
+          if (confirm(name + "を削除しますか？")) {
+            names.splice(index, 1);
+            saveNames(names);
+            renderNameList();
+            renderAttendance();
+          }
+        };
+        div.appendChild(span);
+        div.appendChild(editButton);
+        div.appendChild(deleteButton);
+        container.appendChild(div);
+      });
+    }
+
+    // 名前追加ボタンの処理
+    document.getElementById("addName").onclick = function() {
+      const newName = document.getElementById("newName").value.trim();
+      if (newName === "") {
+        alert("名前を入力してください");
         return;
-    }
-    const newMemberNameInput = document.getElementById('newMemberName');
-    const newMemberName = newMemberNameInput.value.trim();
-    if (newMemberName && !members.includes(newMemberName)) { // 空でない、かつ重複しない場合のみ追加
-        members.push(newMemberName);
-        newMemberNameInput.value = ''; // 入力欄をクリア
-        saveMembers(); // メンバーリストを保存
-        loadMemberList(); // メンバーリストを再表示
-        renderAttendanceTable(); // 出席テーブルを再描画
-        alert(newMemberName + ' さんを追加しました。');
-    } else if (!newMemberName) {
-        alert('メンバー名を入力してください。');
-    } else {
-        alert('そのメンバーは既に登録されています。');
-    }
-}
+      }
+      const names = loadNames();
+      names.push(newName);
+      saveNames(names);
+      document.getElementById("newName").value = "";
+      renderNameList();
+      renderAttendance();
+    };
 
-function deleteMember(index) {
-    if (!adminMode) {
-        alert('管理者モードでのみメンバー削除が可能です。');
+    // 楽器選択フォームの送信処理
+    document.getElementById("instrumentForm").onsubmit = function(e) {
+      e.preventDefault();
+      const checkboxes = document.querySelectorAll("input[name='instruments']:checked");
+      if (checkboxes.length === 0) {
+        alert("少なくとも一つの楽器を選択してください");
         return;
-    }
-    if (confirm(members[index] + ' さんを削除してもよろしいですか？')) {
-        members.splice(index, 1); // メンバーを削除
-        saveMembers(); // メンバーリストを保存
-        loadMemberList(); // メンバーリストを再表示
-        renderAttendanceTable(); // 出席テーブルを再描画
-        alert('メンバーを削除しました。');
-    }
-}
+      }
+      // 選択された楽器の値を取得（必要に応じて利用可能）
+      const selected = Array.from(checkboxes).map(cb => cb.value);
+      console.log("選択された楽器:", selected);
+      // 楽器選択画面を非表示にし、出欠画面を表示
+      document.getElementById("instrumentSelection").style.display = "none";
+      document.getElementById("attendanceSection").style.display = "block";
+      renderAttendance();
+    };
 
+    // 管理者モードへの切替処理
+    let isAdmin = false;
+    document.getElementById("adminToggle").onclick = function() {
+      if (!isAdmin) {
+        // 管理者でない場合はログイン画面を表示
+        document.getElementById("adminLogin").style.display = "block";
+      } else {
+        document.getElementById("adminSection").style.display = "block";
+      }
+    };
 
-function saveMembers() {
-    localStorage.setItem('members', JSON.stringify(members));
-}
+    // 管理者ログイン処理（パスワードは "Brassband"）
+    document.getElementById("loginAdmin").onclick = function() {
+      const pass = document.getElementById("adminPassword").value;
+      if (pass === "Brassband") {
+        isAdmin = true;
+        document.getElementById("adminLogin").style.display = "none";
+        document.getElementById("adminSection").style.display = "block";
+        renderNameList();
+      } else {
+        alert("パスワードが違います");
+      }
+      document.getElementById("adminPassword").value = "";
+    };
 
+    // 管理者モード終了処理
+    document.getElementById("exitAdmin").onclick = function() {
+      isAdmin = false;
+      document.getElementById("adminSection").style.display = "none";
+    };
 
-function loadAttendance() {
-    const today = getFormattedDate();
-    const storedAttendance = localStorage.getItem('attendance_' + today);
-    if (!storedAttendance) {
-        // 今日の出欠データがなければ初期化
-        initializeAttendanceForToday();
-        return;
-    }
-    attendanceData = JSON.parse(storedAttendance);
-}
-
-function initializeAttendanceForToday() {
-    attendanceData = members.map(() => ({ present: false })); // デフォルトは全員「欠席」
-    saveAttendance(); // 初期状態を保存
-}
-
-
-let attendanceData = []; // 出席データを保存する配列
-
-function renderAttendanceTable() {
-    const tableBody = document.getElementById('attendanceTableBody');
-    tableBody.innerHTML = ''; // テーブル内容をクリア
-
-    members.forEach((member, index) => {
-        const row = tableBody.insertRow();
-        const nameCell = row.insertCell(0);
-        const presentCell = row.insertCell(1);
-        const absentCell = row.insertCell(2);
-
-        nameCell.textContent = member;
-
-        // 出席ラジオボタン
-        const presentRadio = document.createElement('input');
-        presentRadio.type = 'radio';
-        presentRadio.name = `attendance_${index}`;
-        presentRadio.value = 'present';
-        presentRadio.classList.add('attendance-checkbox'); // クラスを追加
-        presentRadio.checked = attendanceData[index]?.present === true;
-        presentCell.appendChild(presentRadio);
-
-        // 欠席ラジオボタン
-        const absentRadio = document.createElement('input');
-        absentRadio.type = 'radio';
-        absentRadio.name = `attendance_${index}`;
-        absentRadio.value = 'absent';
-        absentRadio.classList.add('attendance-checkbox'); // クラスを追加
-        absentRadio.checked = attendanceData[index]?.present === false;
-        absentCell.appendChild(absentRadio);
-    });
-}
-
-
-function updateAttendance() {
-    const today = getFormattedDate();
-    attendanceData = members.map((member, index) => {
-        const radioNodes = document.querySelectorAll(`input[name="attendance_${index}"]`);
-        let isPresent = false;
-        radioNodes.forEach(radio => {
-            if (radio.value === 'present' && radio.checked) {
-                isPresent = true;
-            }
-        });
-        return { present: isPresent };
-    });
-    saveAttendance();
-    alert('出欠状況を更新しました。');
-}
-
-function saveAttendance() {
-    const today = getFormattedDate();
-    localStorage.setItem('attendance_' + today, JSON.stringify(attendanceData));
-}
-
-function getFormattedDate() {
-    const today = new Date();
-    const year = today.getFullYear();
-    const month = String(today.getMonth() + 1).padStart(2, '0');
-    const day = String(today.getDate()).padStart(2, '0');
-    return `${year}-${month}-${day}`; // YYYY-MM-DD形式
-}
-
-
-</script>
-
+    // 初期表示設定
+    window.onload = function() {
+      document.getElementById("instrumentSelection").style.display = "block";
+      document.getElementById("attendanceSection").style.display = "none";
+      document.getElementById("adminSection").style.display = "none";
+      document.getElementById("adminLogin").style.display = "none";
+    };
+  </script>
 </body>
 </html>
